--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
 /.python-version
 /.venv
+
+*.sqlite3
 db.sqlite3
+
+# Django stuff
+*.log
+local_settings.py
+
 *.pyc
-__pycache__/
+__pycache__/  
+# the above line ignores all __pycache__ directories everywhere
+$py.class
 
 # # Static asset build output
 # /static/
@@ -35,6 +44,6 @@ __pycache__/
 # # Migrations
 # **/migrations/
 # !**/migrations/__init__.py
-myproject/notes/migrations/0001_initial.py
-myproject/notes/migrations/0002_note_image.py
-myproject/myproject/__pycache__/settings.cpython-312.pyc
+# myproject/notes/migrations/0001_initial.py
+# myproject/notes/migrations/0002_note_image.py
+
